--- a/main.html
+++ b/main.html
@@ -8,6 +8,75 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table class="middle first" id="table-1" >
+		<h3 id="table-1-head">HTML Assingment #3</h3>
+		<tr>
+			<td id="t11">left</td>
+			<td class="center" id="t12">center</td>
+			<td class="right" id='t13'>right</td>
+		</tr>
+		<tr>
+			<td id="t11">left</td>
+			<td class="center" id="t12">center</td>
+			<td class="right" id='t13'>right</td>
+		</tr>
+		<tr>
+			<td id="t11">left</td>
+			<td class="center" id="t12">center</td>
+			<td class="right" id='t13'>right</td>
+		</tr>
+		
+	</table>
+	<table class="middle" id="table-2" >
+		<tr>
+			<td id="t21" colspan="6"></td>
+			
+		</tr>
+		<tr>
+			<td id="t31" rowspan="4"></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td id="t33" colspan="3" rowspan="2"></td>
+			
+
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+
+		</tr>
+		<tr>
+			<td id="t66" colspan="6"></td>
+			
+		</tr>
+		
+	</table>
+	<table id="table-3" class="middle">
+		<tr >
+			<td class="green"></td>
+		</tr>
+		<tr>
+			<td><img id="t-image" src="https://images.squarespace-cdn.com/content/v1/58ee0b551e5b6c8ff18b94ad/1666275165254-PZJ8ZLLI6ME3ZQKDK9XW/lebron+james+20+greatest+nba+players+%281%29.jpg?format=750w"></td>
+		</tr>
+		<tr >
+			<td class="blue"></td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
