--- a/main.html
+++ b/main.html
@@ -71,7 +71,7 @@
 			<td class="green"></td>
 		</tr>
 		<tr>
-			<td><img id="t-image" src="https://images.squarespace-cdn.com/content/v1/58ee0b551e5b6c8ff18b94ad/1666275165254-PZJ8ZLLI6ME3ZQKDK9XW/lebron+james+20+greatest+nba+players+%281%29.jpg?format=750w"></td>
+			<td id="t-image"><img  src="https://images.squarespace-cdn.com/content/v1/58ee0b551e5b6c8ff18b94ad/1666275165254-PZJ8ZLLI6ME3ZQKDK9XW/lebron+james+20+greatest+nba+players+%281%29.jpg?format=750w"></td>
 		</tr>
 		<tr >
 			<td class="blue"></td>
